--- a/README
+++ b/README
@@ -33,7 +33,7 @@
 
   - Do repo init & sync
 
-  $ repo init -u git://github.com/LineageOS/android.git -b cm-11.0
+  $ repo init -u git://github.com/LineageOS/android.git -b cm-14.1
 
 
   - Create .repo/local_manifests/skomer.xml with the following content:
@@ -41,7 +41,7 @@
   <?xml version="1.0" encoding="UTF-8"?>
   <manifest>
       <project name="shamu2811/android_device_samsung_skomer" path="device/samsung/skomer" />
-      <project name="shamu2811/android_kernel_samsung_skomer" path="kernel/samsung/skomer" />
+      <project name="shamu2811/android_kernel_samsung_skomer" path="kernel/samsung/skomer" revision="jellybean" />
       <project name="shamu2811/android_vendor_samsung_skomer" path="vendor/samsung/skomer" />
   </manifest>
 
